--- a/src/components/movie-card/movie-card.html
+++ b/src/components/movie-card/movie-card.html
@@ -1,1 +1,1 @@
-<img class="poster" [src]="movie.posterUrl + '?nocache=' + epoch" [movieInfoClick]="movie"/>
+<img class="poster" [src]="movie.posterUrls[0] + '?nocache=' + epoch" [movieInfoClick]="movie" />
