--- a/src/app/components/movie-card/movie-card.scss
+++ b/src/app/components/movie-card/movie-card.scss
@@ -1,5 +1,5 @@
-movie-card {
-    border: 1px solid #313131;;
+:host {
+    border: 1px solid #313131;
     display: inline-block;
     padding: 0px;
     margin: 5px;
@@ -7,8 +7,6 @@ movie-card {
     cursor: pointer;
 }
 
-movie-card {
-    img {
-        border: 0px;
-    }
+img {
+    border: 0px;
 }
