--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -9,7 +9,7 @@
 
 <ion-content padding text-center>
     <movie-card *ngFor="let movie of movies" [movie]="movie"></movie-card>
-    <p *ngIf="!movies || movies?.length === 0">Oh snap! There are no movies in your library.
+    <p *ngIf="movies && movies?.length === 0">Oh snap! There are no movies in your library.
         <br />
         <br />
         <ion-button routerLink="/sources">Manage media sources</ion-button>
