--- a/src/app/pages/admin/admin.html
+++ b/src/app/pages/admin/admin.html
@@ -1,8 +1,8 @@
 <ion-header>
     <ion-toolbar>
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
+        <ion-buttons slot="start">
+            <ion-menu-button autoHide="false"></ion-menu-button>
+        </ion-buttons>
         <ion-title>Admin</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -14,7 +14,8 @@
         </ion-card-header>
         <ion-card-content *ngIf="!isCheckingStatus">
             Last generated
-            <span *ngIf="libraryStatus?.lastGeneratedDate">on {{libraryStatus?.lastGeneratedDate|date:"EEEE MMMM d 'at' hh:mm a"}} </span>
+            <span *ngIf="libraryStatus?.lastGeneratedDate">on
+                {{libraryStatus?.lastGeneratedDate|date:"EEEE MMMM d 'at' hh:mm a"}} </span>
             <span *ngIf="!libraryStatus && !isCheckingStatus">: unknown</span>
             <span *ngIf="libraryStatus && !libraryStatus?.lastGeneratedDate">: never</span>
             <ng-container *ngIf="lastGeneratedDateDifference">
@@ -27,7 +28,7 @@
                 </span>
                 <ul>
                     <li *ngFor="let item of libraryStatus.failedItems;">{{item.mediaType}}: {{item.path}}
-                        <br/>Error message: {{item.exception.message}}
+                        <br />Error message: {{item.exception.message}}
                     </li>
                 </ul>
             </div>
@@ -37,12 +38,15 @@
             <progress-bar [percentage]="percentage"></progress-bar>
         </div>
         <ion-card-content>
-            <button *ngIf="generateLibraryButtonIsVisible" (click)="generateLibrary()" ion-button>Generate Library</button>
+            <ion-button *ngIf="generateLibraryButtonIsVisible" (click)="generateLibrary()">Generate
+                Library
+            </ion-button>
             <ng-container *ngIf="isLibGenRequestProcessing">
                 <ion-spinner></ion-spinner>Generating library
             </ng-container>
             <ng-container *ngIf="isCheckingStatus">
-                <ion-spinner></ion-spinner>{{libraryStatus && libraryStatus.state? libraryStatus.state: 'Checking library generator status'}}
+                <ion-spinner></ion-spinner>
+                {{libraryStatus && libraryStatus.state? libraryStatus.state: 'Checking library generator status'}}
                 <ng-container *ngIf="getTimeRemaining() && libraryStatus">
                     ({{getTimeRemaining()}} remaining)
                 </ng-container>
@@ -59,7 +63,7 @@
             </ng-container>
             <div style="color:red" *ngIf="libraryStatus?.exception">
                 Library generation failed.
-                <br/> {{libraryStatus?.exception.message}}
+                <br /> {{libraryStatus?.exception.message}}
             </div>
         </ion-card-content>
 
@@ -83,7 +87,7 @@
                     </tr>
                 </tbody>
             </table>
-            <button ion-button goToPageClick="Sources">Manage shared folders</button>
+            <ion-button routerLink="/sources">Manage shared folders</ion-button>
         </ion-card-content>
     </ion-card>
 </ion-content>
