--- a/src/app/pages/movie-info/movie-info.html
+++ b/src/app/pages/movie-info/movie-info.html
@@ -11,7 +11,7 @@
 <ion-content relative>
     <div *ngIf="movie" max-width>
         <h1 class="title">{{movie.title}}</h1>
-        <div class="various-info" text-center>
+        <div class="various-info" text-center> 
             <ng-container inline-block v-center *ngIf="movie.releaseYear">{{movie.releaseYear}} </ng-container>
             <ng-container inline-block v-center *ngIf="!movie.releaseYear">Release date unknown</ng-container>
             <ion-badge v-center>{{movie.rating ? movie.rating : 'Rating unknown'}}</ion-badge>
@@ -21,14 +21,14 @@
             <div class="vignette-left"></div>
             <img class="backdrop" [imageSwapper]="movie.backdropUrls" />
             <div class="vignette-right"></div>
-            <button class="play-button" ion-button [moviePlayClick]="movie">
+            <button class="play-button" routerLink="/movies/{{movie.id}}/play">
                 <ion-icon name="play"></ion-icon>
             </button>
         </div>
         <div text-center>
         </div>
         <p>{{movie.summary? movie.summary: 'No summary available'}}</p>
-        <ion-button [movieMetadataClick]="movie">Manage Metadata</ion-button>
+        <ion-button routerLink="/movies/{{movie.id}}/metadata">Manage Metadata</ion-button>
         <ion-button [mediaItemProcessClick]="movie">Process Movie</ion-button>
         <a target="_blank" *ngIf="movie.tmdbId" href="https://www.themoviedb.org/movie/{{movie.tmdbId}}">
             <ion-button>View on TMDB</ion-button>
