--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
+    //update index.html `theme-color` if you change this background color
     --ion-background-color: #232323;
     --ion-text-color: #FFFFFF;
 
