--- a/src/app/pages/movie-play/movie-play.html
+++ b/src/app/pages/movie-play/movie-play.html
@@ -10,6 +10,6 @@
 <ion-content>
     <ng-container *ngIf="movie">
         <videojs-video [mediaItemId]="movie.id" [url]="movie.videoUrl" [poster]="movie.backdropUrls[0]"
-            [autoplay]="true" [seconds]="movie.resumeSeconds"></videojs-video>
+            [autoplay]="true" [seconds]="resumeSeconds"></videojs-video>
     </ng-container>
 </ion-content>
