--- a/src/app/pages/movie-info/movie-info.html
+++ b/src/app/pages/movie-info/movie-info.html
@@ -1,37 +1,41 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button autoHide="false"></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Movie Info</ion-title>
-    </ion-toolbar>
-</ion-header>
-
-
-<ion-content relative>
-    <div *ngIf="movie" max-width>
-        <h1 class="title">{{movie.title}}</h1>
-        <div class="various-info" text-center> 
-            <ng-container inline-block v-center *ngIf="movie.releaseYear">{{movie.releaseYear}} </ng-container>
-            <ng-container inline-block v-center *ngIf="!movie.releaseYear">Release date unknown</ng-container>
-            <ion-badge v-center>{{movie.rating ? movie.rating : 'Rating unknown'}}</ion-badge>
-            {{movie.runtimeSeconds ? Math.ceil(movie.runtimeSeconds/60) + ' minutes' : 'Runtime unknown'}}
-        </div>
+<ion-content relative fill>
+    <div *ngIf="movie" max-width full-height>
         <div class="backdrop-container">
-            <div class="vignette-left"></div>
-            <img class="backdrop" [imageSwapper]="movie.backdropUrls" />
-            <div class="vignette-right"></div>
-            <button class="play-button" routerLink="/movies/{{movie.id}}/play">
-                <ion-icon name="play"></ion-icon>
-            </button>
+            <ion-menu-button class="menu-button" color="light" autoHide="false"></ion-menu-button>
+            <div class="vignette-top"></div>
+            <div class="backdrop">
+                <img class="backdrop-image" [imageSwapper]="movie.backdropUrls" />
+            </div>
+            <div class="vignette-bottom"></div>
         </div>
+        <h1 class="title">{{movie.title}}</h1>
+        <div class="various-info" text-center>
+            <span>
+                <ion-badge v-center>{{movie.rating ? movie.rating : 'Rating unknown'}}</ion-badge>
+            </span>
+            &bull;
+            <span>
+                {{movie.runtimeSeconds ? Math.ceil(movie.runtimeSeconds/60) + ' minutes' : 'Runtime unknown'}}
+            </span>
+            &bull;
+            <span inline-block v-center>
+                {{movie.releaseYear?movie.releaseYear: 'Release date unknown'}}
+            </span>
+        </div>
+
+        <!--play button-->
         <div text-center>
+            <ion-button color="success" routerLink="/movies/{{movie.id}}/play">
+                <ion-icon name="play"></ion-icon>&nbsp;Watch Now
+            </ion-button>
         </div>
-        <p>{{movie.summary? movie.summary: 'No summary available'}}</p>
-        <ion-button routerLink="/movies/{{movie.id}}/metadata">Manage Metadata</ion-button>
-        <ion-button [mediaItemProcessClick]="movie">Process Movie</ion-button>
-        <a target="_blank" *ngIf="movie.tmdbId" href="https://www.themoviedb.org/movie/{{movie.tmdbId}}">
-            <ion-button>View on TMDB</ion-button>
-        </a>
+        <div padding>
+            <p>{{movie.summary? movie.summary: 'No summary available'}}</p>
+            <ion-button routerLink="/movies/{{movie.id}}/metadata">Manage Metadata</ion-button>
+            <ion-button [mediaItemProcessClick]="movie">Process Movie</ion-button>
+            <a target="_blank" *ngIf="movie.tmdbId" href="https://www.themoviedb.org/movie/{{movie.tmdbId}}">
+                <ion-button>View on TMDB</ion-button>
+            </a>
+        </div>
     </div>
 </ion-content>
