--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,6 @@
     </ion-content>
 </ion-menu>
 
-<ion-app>
-    <ion-router-outlet id="router-outlet"></ion-router-outlet>
+<ion-app full>
+    <ion-router-outlet id="router-outlet" full></ion-router-outlet>
 </ion-app>
