--- a/src/app/components/videojs-video/videojs-video.html
+++ b/src/app/components/videojs-video/videojs-video.html
@@ -1,6 +1,3 @@
-<video *ngIf="url" id="{{id}}" class="video-js vjs-default-skin vjs-big-play-centered vjs-16-9" controls preload="auto"
-    width="640" height="264">
-
+<video *ngIf="url" id="{{id}}" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto">
     <source [src]="url" type="video/mp4" />
-
 </video>
