--- a/src/app/components/videojs-video/videojs-video.scss
+++ b/src/app/components/videojs-video/videojs-video.scss
@@ -1,4 +1,14 @@
+:host {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
 .video-js {
-    height: 100% !important;
-    padding: 0 !important;
+    min-width: 100% !important;
+    min-height: 100% !important;
+    width: auto !important;
+    height: auto !important;
 }
