--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,16 @@
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
 
+
+.full,
+[full] {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
 *[inline-block],
 .inline-block {
     display: inline-block;
