Fixed title in admin page

--- a/src/app/pages/admin/admin.html
+++ b/src/app/pages/admin/admin.html
@@ -10,7 +10,7 @@
 <ion-content padding>
     <ion-card>
         <ion-card-header>
-            <h1>Library</h1>
+            <ion-card-title>Library </ion-card-title>
         </ion-card-header>
         <ion-card-content *ngIf="!isCheckingStatus">
             Last generated
@@ -70,7 +70,7 @@
     </ion-card>
     <ion-card>
         <ion-card-header>
-            <h1>Shared folders</h1>
+            <ion-card-title>Shared Folders </ion-card-title>
         </ion-card-header>
         <ion-card-content>
             <table class="shared-folders-table" *ngIf="sources">
