--- a/src/app/components/videojs-video/videojs-video.html
+++ b/src/app/components/videojs-video/videojs-video.html
@@ -1,3 +1,12 @@
-<video *ngIf="url" id="{{id}}" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto">
+<video *ngIf="url" id="{{videoPlayerId}}" class="video-js vjs-default-skin vjs-big-play-centered" preload="auto">
     <source [src]="url" type="video/mp4" />
 </video>
+<div id="video-buttons-container-{{videoPlayerId}}" class="video-buttons-container">
+    <div class="backdrop"></div>
+    <div class="video-buttons">
+        <ion-icon name="refresh" flip-x (click)="jumpBackward()"></ion-icon>
+        <ion-icon name="play" (click)="play()" [hidden]="!isPaused"></ion-icon>
+        <ion-icon name="pause" (click)="pause()" [hidden]="isPaused"></ion-icon>
+        <ion-icon name="refresh" (click)="jumpForward()"></ion-icon>
+    </div>
+</div>
