--- a/src/app/components/videojs-video/videojs-video.scss
+++ b/src/app/components/videojs-video/videojs-video.scss
@@ -12,3 +12,52 @@
     width: auto !important;
     height: auto !important;
 }
+
+.centered-control-bar {
+    border: 1px solid red;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+}
+
+.vjs-big-play-button {
+    display: none !important;
+}
+
+.video-buttons-container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    left: 0;
+    top: 0;
+    position: absolute;
+}
+
+.video-buttons {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 5em;
+    z-index: 11;
+
+    ion-icon {
+        margin: 20px;
+        cursor: pointer;
+    }
+}
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: black;
+    opacity: .4;
+    z-index: 10;
+}
