--- a/src/global.scss
+++ b/src/global.scss
@@ -176,3 +176,12 @@ movie-card .poster {
 .transparent {
     opacity: 0;
 }
+
+[flip-x] {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+}
