--- a/src/app/components/videojs-video/videojs-video.scss
+++ b/src/app/components/videojs-video/videojs-video.scss
@@ -32,6 +32,12 @@
     left: 0;
     top: 0;
     position: absolute;
+    opacity: 1;
+    transition: opacity 300ms ease-in-out;
+
+    &.hide {
+        opacity: 0;
+    }
 }
 
 .video-buttons {
@@ -60,4 +66,11 @@
     background-color: black;
     opacity: .4;
     z-index: 10;
+}
+
+.back-container {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    z-index: 30;
 }
