--- a/src/app/components/videojs-video/videojs-video.scss
+++ b/src/app/components/videojs-video/videojs-video.scss
@@ -74,3 +74,10 @@
     top: 10px;
     z-index: 30;
 }
+
+seek-bar {
+    position: absolute;
+    bottom: 0px;
+    margin-bottom: 40px;
+    width: 100%;
+}
