Added time remaining to the seek bar.

--- a/src/app/components/seek-bar/seek-bar.html
+++ b/src/app/components/seek-bar/seek-bar.html
@@ -1,2 +1,16 @@
-<input #input class="slider" type="range" min="0" [max]="totalSeconds" [(ngModel)]="_value" (change)="$event.stopPropagation()"
-       (input)="onInput($event);" (mousedown)="dragstart.emit()" (mouseup)="dragstop.emit()" />
+<div class="container">
+    <div class="left">
+        <input #input class="slider"
+               type="range"
+               min="0"
+               [max]="totalSeconds"
+               [(ngModel)]="_value"
+               (change)="$event.stopPropagation()"
+               (input)="onInput($event);"
+               (mousedown)="dragstart.emit()"
+               (mouseup)="dragstop.emit()" />
+    </div>
+    <div class="right">
+        <span class="">{{hoursMinutesSeconds}}</span>
+    </div>
+</div>
