--- a/src/app/components/videojs-video/videojs-video.html
+++ b/src/app/components/videojs-video/videojs-video.html
@@ -16,17 +16,17 @@
             <ion-icon name="pause" (click)="pause()" [hidden]="isPaused"></ion-icon>
             <ion-icon name="refresh" (click)="jumpForward()"></ion-icon>
         </div>
-        <div class="bottom-controls">
+        <div class="bottom-controls"(click)="$event.stopPropagation()">
             <div class="left">
                 <seek-bar [totalSeconds]="totalSeconds"
                           [value]="_seconds"
                           (change)="seekChange($event)"
                           (dragstart)="seekDragStart()"
                           (dragstop)="seekDragStop()"
-                          (click)="$event.stopPropagation()"></seek-bar>
+                          ></seek-bar>
             </div>
             <div class="right">
-                <button (click)="toggleFullScreen()">
+                <button class="fullscreen-button" (click)="toggleFullScreen()">
                     <ion-icon name="expand"></ion-icon>
                 </button>
             </div>
