--- a/src/app/components/videojs-video/videojs-video.scss
+++ b/src/app/components/videojs-video/videojs-video.scss
@@ -53,13 +53,32 @@
     z-index: 11;
 }
 
+.jump-seconds-left {
+    position: absolute;
+    left: 72px;
+    top: 67px;
+    font-size: 15px;
+}
+
+
+.jump-seconds-right {
+    position: absolute;
+    left: 60px;
+    top: 67px;
+    font-size: 15px;
+}
+
 .center-buttons {
-    font-size: 5em;
+    font-size: 70px;
 
     ion-icon {
         margin: 40px;
         cursor: pointer;
     }
+}
+
+.hide {
+    opacity: 1 !important;
 }
 
 .backdrop {
@@ -82,7 +101,7 @@
     position: absolute;
     bottom: 0px;
     margin-bottom: 40px;
-    width: 90%;
+    width: 100%;
     display: table;
     box-sizing: border-box;
     margin-left: auto;
@@ -92,11 +111,13 @@
 .left {
     display: table-cell;
     width: 100%;
+    padding-left: 10px;
 }
 
 .right {
     display: table-cell;
     padding-left: 15px;
+    padding-right: 10px;
     font-size: 2em;
     position: relative;
     top: 7px;
