--- a/src/app/pages/sources/sources.html
+++ b/src/app/pages/sources/sources.html
@@ -33,7 +33,7 @@
             </ion-grid>
         </ion-card-content>
     </ion-card>
-    <ion-button ion-button color="secondary" (click)="sources.push({})">
+    <ion-button ion-button color="secondary" (click)="addSource()">
         <ion-icon name="add"></ion-icon>&nbsp;Add source
     </ion-button>
     <ion-fab (click)="save()" color="primary" vertical="bottom" horizontal="end" slot="fixed">
