--- a/src/app/pages/movie-info/movie-info.html
+++ b/src/app/pages/movie-info/movie-info.html
@@ -32,6 +32,7 @@
             <a target="_blank" *ngIf="movie.tmdbId" href="https://www.themoviedb.org/movie/{{movie.tmdbId}}">
                 <ion-button>View on TMDB</ion-button>
             </a>
+            <ion-button routerLink="/movies/{{movie.id}}/history">Viewing History</ion-button>
         </div>
     </div>
 </ion-content>
