--- a/src/app/components/seek-bar/seek-bar.scss
+++ b/src/app/components/seek-bar/seek-bar.scss
@@ -31,6 +31,7 @@
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    cursor: pointer;
 
     &::-webkit-slider-thumb {
         -webkit-appearance: none;
